src/objects/PerfLog__c.object
<CustomObject>
    <description>use for tracking timing numbers for performance analysis within NPSP</description>
    <fields>
        <fullName>BDI_Batch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NPSP Data Import Batch</label>
        <referenceTo>DataImportBatch__c</referenceTo>
        <relationshipLabel>Perf Logs</relationshipLabel>
        <relationshipName>Perf_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Component__c</fullName>
        <label>Component</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <label>Duration (millisec)</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Label__c</fullName>
        <label>Label</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Log_Type__c</fullName>
        <label>Log Type</label>
        <picklist>
            <picklistValues>
                <fullName>Method</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Query</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Number_of_Records__c</fullName>
        <label>Number of Records</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parent_Duration__c</fullName>
        <label>Parent Duration</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PercentOfParent__c</fullName>
        <formula>Duration__c /  Parent_Duration__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Percent of Parent Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <label>Perf Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>BDI_Batch__c</columns>
        <columns>Component__c</columns>
        <columns>Label__c</columns>
        <columns>Log_Type__c</columns>
        <columns>Number_of_Records__c</columns>
        <columns>Duration__c</columns>
        <columns>Parent_Duration__c</columns>
        <columns>PercentOfParent__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Perf Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Perf Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>